# demo-multi-agent

./: .env  .gitignore  README.md  pyproject.toml
multi_lang_agent/: __init__.py  cli.py  config.py  team.py
multi_lang_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
